python/testData/highlighting/oddNumberOfQuotes.py
'''a'''<error descr="Missing closing quote [']">'</error>
